--- a/gb/19/2/5/n11025509.md
+++ b/gb/19/2/5/n11025509.md
@@ -1,61 +1,50 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>新戏拍摄遇年节 方文林喊话制作人放长假</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/02/1902050146011487-600x400.jpg" />
 <h6>方文琳（中）领军台剧《生生世世》主要演员，首度在剧组以外的地方齐聚，参加除夕特别节目。图为资料照。（台视提供）
 </h6>
 <hr>
-	<p>【大纪元2019年02月05日讯】台视时代大戏《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%94%9F%E7%94%9F%E4%B8%96%E4%B8%96.md#1">生生世世</a>》中主要演员<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%B9%E6%96%87%E7%90%B3.md#1">方文琳</a>、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9E%97%E5%98%89%E4%BF%90.md#1">林嘉俐</a>、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%B1%B3%E5%8F%AF%E7%99%BD.md#1">米可白</a>、林雨宣、曾子益、阿庞、吴勇滨、黄文星等，首度在剧组以外的地方齐聚，参加除夕特别节目《2019超级巨星红白艺能大赏》。方文琳于录影当时表示，很期待新戏上档，跟大家见面。</p>
-<figure id="attachment_11025530" aria-describedby="caption-attachment-11025530" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/02/1902050145521487.jpg"><img class="size-large wp-image-11025530" title="" src="https://i.epochtimes.com/assets/uploads/2019/02/1902050145521487-600x360.jpg" alt="" width="600" b="360" /></a><figcaption id="caption-attachment-11025530" class="wp-caption-text"><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%B9%E6%96%87%E7%90%B3.md#1">方文琳</a>领军时代大戏《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%94%9F%E7%94%9F%E4%B8%96%E4%B8%96.md#1">生生世世</a>》主要演员参加除夕特别节目《2019超级巨星红白艺能大赏》。（台视提供）</figcaption></figure>
+	<p>【大纪元2019年02月05日讯】台视时代大戏《生生世世》中主要演员方文琳、林嘉俐、米可白、林雨宣、曾子益、阿庞、吴勇滨、黄文星等，首度在剧组以外的地方齐聚，参加除夕特别节目《2019超级巨星红白艺能大赏》。方文琳于录影当时表示，很期待新戏上档，跟大家见面。</p>
+<figure id="attachment_11025530" aria-describedby="caption-attachment-11025530" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/02/1902050145521487.jpg"><img decoding="async" class="size-large wp-image-11025530" title="" src="https://i.epochtimes.com/assets/uploads/2019/02/1902050145521487-600x360.jpg" alt="" width="600" b="360" /></a><figcaption id="caption-attachment-11025530" class="wp-caption-text">方文琳领军时代大戏《生生世世》主要演员参加除夕特别节目《2019超级巨星红白艺能大赏》。（台视提供）</figcaption></figure>
 <p>台剧《生生世世》正如火如荼拍摄中，演员们无不期盼能趁年假期间好好充电，方文琳率向制作人喊话：“相信制作人一定会很贴心让大家放很长的假！”演员阿庞笑说：“希望文琳姐愿望成真，因为我之前还有曾经在小年夜拍过跳海戏喔！”</p>
 <p>方文琳大方分享过年期间大都是全家人一起回到故乡彰化社头，家中小孩们的红包是由自家兄弟姊妹依能力拿钱出来，再分装大小数目不一的红包让孩子去抽，看谁幸运抽到大红包，而她也感性提到：“其实只要家人在一起就很有过年团圆的感觉。”</p>
-<p>演员<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9E%97%E5%98%89%E4%BF%90.md#1">林嘉俐</a>则笑言“过年最期待可以吃到道地的白菜卤”；而黄文星身为剧组中唯一上台演唱的代表，他谦虚地说：“要演唱的歌曲，很温馨也很符合过年感，不过这也是我金曲奖得奖的歌曲，所以不会紧张啦。”</p>
-<p>每年过年总是会回老家帮忙做饼的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%B1%B3%E5%8F%AF%E7%99%BD.md#1">米可白</a>，自信地表示担任美食节目主持人已经一年多了，现在厨艺早不同以往，她大笑解释说：“我们家领养一岁浪浪，我每天亲自下厨帮它准备，现在已经养到十多公斤，很怕把它从米克思养成腊肠狗！”</p>
-<figure id="attachment_11025528" aria-describedby="caption-attachment-11025528" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/02/1902050145571487.jpg"><img class="size-large wp-image-11025528" title="" src="https://i.epochtimes.com/assets/uploads/2019/02/1902050145571487-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-11025528" class="wp-caption-text">方文琳领军时代大戏《生生世世》主要演员参加除夕特别节目《2019超级巨星红白艺能大赏》。图为资料照。（台视提供）</figcaption></figure>
+<p>演员林嘉俐则笑言“过年最期待可以吃到道地的白菜卤”；而黄文星身为剧组中唯一上台演唱的代表，他谦虚地说：“要演唱的歌曲，很温馨也很符合过年感，不过这也是我金曲奖得奖的歌曲，所以不会紧张啦。”</p>
+<p>每年过年总是会回老家帮忙做饼的米可白，自信地表示担任美食节目主持人已经一年多了，现在厨艺早不同以往，她大笑解释说：“我们家领养一岁浪浪，我每天亲自下厨帮它准备，现在已经养到十多公斤，很怕把它从米克思养成腊肠狗！”</p>
+<figure id="attachment_11025528" aria-describedby="caption-attachment-11025528" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/02/1902050145571487.jpg"><img decoding="async" class="size-large wp-image-11025528" title="" src="https://i.epochtimes.com/assets/uploads/2019/02/1902050145571487-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-11025528" class="wp-caption-text">方文琳领军时代大戏《生生世世》主要演员参加除夕特别节目《2019超级巨星红白艺能大赏》。图为资料照。（台视提供）</figcaption></figure>
 <p>米可白即便嫁做人妻，年节仍不忘回娘家饼铺帮忙展孝心，她乐观道：“过年时全家人都很忙，但希望今年还是能抽空带爸妈出国旅游！”</p>
 <p>责任编辑：梁梦竹</p>
 <p>&nbsp;</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/14/2/7/n4077722.md#1">敖犬承诺收视破2 男扮女装答谢观众</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/14/12/10/n4315390.md#1">杨贵媚为戏苦学把脉 上街遇粉丝求诊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/4/17/n7563681.md#1">米可白庆生眼眶泛泪 爆林俊逸最爱模仿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/5/18/n7906008.md#1">收视连创新高 王凯米可白甜点配红酒庆功</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/14/2/7/n4077722.md#1">敖犬承诺收视破2 男扮女装答谢观众</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/14/12/10/n4315390.md#1">杨贵媚为戏苦学把脉 上街遇粉丝求诊</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/17/n7563681.md#1">米可白庆生眼眶泛泪 爆林俊逸最爱模仿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/18/n7906008.md#1">收视连创新高 王凯米可白甜点配红酒庆功</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/21/n10990583.md#1" target="_blank">林辉：岳飞忠魂千古颂 中共侮辱英雄可憎</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/23/n10871477.md#1" target="_blank">感恩节 来自西方人的最美好心愿</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/7/n10121258.md#1" target="_blank">郑克中：北大“文革”二三事</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/30/n11488493.md#1" target="_blank">苦难中坚守希望 京城姐妹的跌宕人生（2）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945330.md#1">【未解之谜】罕见天象昭示红朝命数？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944080.md#1">一代圣主康熙皇帝至孝之至 数十年如一日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/5/22/n13743021.md#1">大劫前冥府造册 是否真的在劫难逃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945916.md#1">电视人患忧郁症陷绝境 因一本奇书改变命运</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13933872.md#1">诗：聆听创世主的雷音 ⑴⑵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947539.md#1">【探索时分】援乌上万枚反坦克导弹 美军工强大</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947817.md#1">【晚间新闻】甲流还是新冠？多名重症患儿病亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947595.md#1">【中国禁闻】失业潮席卷珠三角 求职者露宿街头</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947069.md#1">丑闻缠身 韩正接替王岐山任中共国家副主席</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947020.md#1">习近平三连任 分析：或将遭遇前所未有打击</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947000.md#1">中共国务院机构改革方案通过 罕现1票反对</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946022.md#1">疑违反奥斯卡规定 杨紫琼急删争议帖文</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947269.md#1">TWICE发行迷你12辑 透露成员关系亲密秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947566.md#1">关晓彤零遮掩买早餐 与店员逗趣对话笑翻网友</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946900.md#1">陆男团偶像徐炳超消失半年 街头卖包子上热搜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946850.md#1">退休前想重温拍剧 梁朝伟未必首选TVB</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945826.md#1">补充蛋白质 11种常见食物价格亲民又实惠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13943988.md#1">快速摆脱身体不适 高剂量维生素C有助改善</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947035.md#1">抗癌有最佳时间</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946374.md#1">心理学家阐述何谓“二手压力”？有何迹象？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/26/n13938698.md#1">随时随地都能专心工作的7个诀窍</a></li>
-<hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/2/5/n11025509.htm">新戏拍摄遇年节 方文林喊话制作人放长假</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/19/2/5/n11025509.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405076.md#1">人算不如天算 嫉妒心反害了自身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/13/n10781563.md#1">在宋朝作诗能转运？宋祁错失状元得赐婚</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412120.md#1">【未解之谜】痴迷好莱坞 《乱世佳人》剧作家转世重生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416712.md#1">【唐青看时事】卢比奥势不可挡 北京如何应对</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416610.md#1">【菁英论坛】TikTok生死时刻 中美数字战开打</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416095.md#1">【车评】拥有STI灵魂的跑车 2025 Subaru WRX tS</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413081.md#1">除杂货外 Costco六款时尚设计师服装太超值</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415954.md#1">荷兰决定不公开ASML敏感设备对华出口数据</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415897.md#1">【快讯】美最高院裁决TikTok败诉 维持禁令</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416718.md#1">泰缅边境失联模特杨泽琪获救 指甲被拔引关注</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14416015.md#1">港片在大陆市场连连失利 谢霆锋转向开演唱会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415967.md#1">3个女儿同时发烧住院输液 谢娜自曝情绪崩溃</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415285.md#1">新片在韩国票房遭遇滑铁卢 宋仲基哽咽拭泪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14415228.md#1">李奥纳多捐百万救灾 此前带女友出国度假遭批</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415611.md#1">用泡过的茶包做堆肥？ 你应该先做一件事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414719.md#1">【元气99】逢年过节 怎样食得开心又健康</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412855.md#1">自我诊断和改善 摆脱睡眠呼吸中止症</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412714.md#1">中医师推荐年货中药材 为年菜增添滋补功效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/9/n14409994.md#1">研究：锌可能有助于抑制抗生素产生抗药性</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/2/5/n11025509.htm">新戏拍摄遇年节 方文林喊话制作人放长假</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/19/2/5/n11025509.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
